--- a/www/index.html
+++ b/www/index.html
@@ -72,7 +72,7 @@
                         <input type="checkbox" id="Autre" checked/>
                         <label for="Autre">Autre</label>
                     </div>
-                <div class="filters__links noselect" style="padding: 0px; padding-top: 12px;">
+                <div class="filters__links filters__filter--links  noselect">
                 <a href="#" onclick="selectAllFilters()">Tous</a> / <a href="#" onclick="unselectAllFilters()">Aucun</a>
                 </div>
         
