--- a/www/index.html
+++ b/www/index.html
@@ -72,7 +72,7 @@
                         <input type="checkbox" id="Autre" checked/>
                         <label for="Autre">Autre</label>
                     </div>
-                <div class="filters__links filters__filter--links  noselect">
+                <div class="filters__links noselect">
                 <a href="#" onclick="selectAllFilters()">Tous</a> / <a href="#" onclick="unselectAllFilters()">Aucun</a>
                 </div>
         
@@ -96,7 +96,7 @@
                             <tr>
                                 <th>Nom de l'action</th>
                                 <th>Etablissement</th>
-                                <th style="width: 90px;">Total d'élèves</th>
+                                <th class="information-card__table__header--90px">Total d'élèves</th>
                             </tr>
                         </thead>
                         <tfoot>
