--- a/www/index.html
+++ b/www/index.html
@@ -139,6 +139,7 @@
         <div id="map">
         </div>
     </div>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>    
     <script src="js/index.js"></script>
     <script>
 
