--- a/www/index.html
+++ b/www/index.html
@@ -429,7 +429,7 @@
                    (acc, type) => acc || filteredTypes.indexOf(type) != -1 , false
                 ));
             }
-            return actors
+            return actors;
         }
 
         // ActeursCulturelles
